--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 	<div>
 		<p>
-			Sorry for the inconvenience but we&rsquo;re performing some maintenance at
-			the moment. If you need to you can always
+			Sorry for the inconvenience, but we&rsquo;re performing some maintenance at
+			the moment. If you need to, you can always
 			<a href="mailto:support@circuitverse.org">contact us</a>, otherwise
 			we&rsquo;ll be back online shortly!
 		</p>
